# pinecone-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LEGACY-README.md  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/actions/setup-poetry/: action.yml
.github/workflows/: CI.yml  conneciton_tests.yaml  pr.yaml
client_sdk/: Cargo.toml  build.rs
client_sdk/src/: data_types.rs  index.rs  lib.rs
client_sdk/src/client/: control_plane.rs  grpc.rs  mod.rs  pinecone_client.rs
client_sdk/src/utils/: conversions.rs  errors.rs  mod.rs  python_conversions.rs
clients/python/: Cargo.toml
clients/python/src/: client.rs  data_types.rs  index.rs  lib.rs
clients/python/src/utils/: errors.rs
clients/python/tests/unit/: report.html  test_control_plane.py
clients/python/tests/unit/utils/: remote_index.py
index_service/: Cargo.toml  build.rs
openapi/: index_service.json
pinecone/: Cargo.toml  pyproject.toml
pinecone/src/: data_types.rs  index.rs  lib.rs
pinecone/src/utils/: errors.rs
tests/grpc/: test_multi_thread.py
tests/unit/: test_control_plane.py  test_data_plane.py  test_hybrid_search.py  test_metadata.py  test_upsert_format.py  tox.ini
tests/unit/utils/: utils.py
tests/utils/: utils.py
workflows/: CI.yml
