[package]
name = "pinecone"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pinecone"
crate-type = ["cdylib"]
bench=false



[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
client_sdk = {path = "../client_sdk" }
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.6", features = ["json"] }
pyo3-asyncio = {version = "0.18.0", features = ["tokio-runtime"]}
